Fix documentation of GetSprite

--- a/documentation/commands.html
+++ b/documentation/commands.html
@@ -732,7 +732,7 @@
                                 <td>-</td>
                             </tr>
                             <tr>
-                                <td><code><span class="bl">det(</span>61,<span class="red">PTR</span>,<span class="red">X</span>,<span class="red">Y</span>,<span class="red">WSCALE</span>,<span class="red">HSCALE</span><span class="bl">)</span></code></td>
+                                <td><code><span class="bl">det(</span>61,<span class="red">PTR</span>,<span class="red">X</span>,<span class="red">Y</span><span class="bl">)</span></code></td>
                                 <td>GetSprite</td>
                                 <td>Grabs the background behind a sprite, and stores it to the memory pointed to by <code><span class="red">PTR</span></code>. <i>Note: you need to store the width and the height (both 1-byte values) to the memory first.</i></td>
                                 <td>-</td>
